tests/ui/invalid_pyclass_generic.stderr
error[E0592]: duplicate definitions with name `__pymethod___class_getitem____`
  --> tests/ui/invalid_pyclass_generic.rs:4:1
   |
 4 | #[pyclass(generic)]
   | ^^^^^^^^^^^^^^^^^^^ duplicate definitions for `__pymethod___class_getitem____`
...
13 | #[pymethods]
   | ------------ other definition for `__pymethod___class_getitem____`
   |
   = note: this error originates in the macro `::pyo3::impl_::pymethods::maybe_define_fastcall_function_with_keywords` which comes from the expansion of the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0592]: duplicate definitions with name `__class_getitem__`
  --> tests/ui/invalid_pyclass_generic.rs:4:1
   |
 4 |   #[pyclass(generic)]
   |   ^^^^^^^^^^^^^^^^^^^ duplicate definitions for `__class_getitem__`
...
21 | /     pub fn __class_getitem__(
22 | |
23 | |
24 | |         cls: &Bound<'_, PyType>,
...  |
27 | |     ) -> PyResult<Py<PyAny>> {
   | |____________________________- other definition for `__class_getitem__`
   |
   = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0034]: multiple applicable items in scope
  --> tests/ui/invalid_pyclass_generic.rs:4:1
   |
 4 | #[pyclass(generic)]
   | ^^^^^^^^^^^^^^^^^^^ multiple `__pymethod___class_getitem____` found
   |
note: candidate #1 is defined in an impl for the type `ClassRedefinesClassGetItem`
  --> tests/ui/invalid_pyclass_generic.rs:4:1
   |
 4 | #[pyclass(generic)]
   | ^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `ClassRedefinesClassGetItem`
  --> tests/ui/invalid_pyclass_generic.rs:13:1
   |
13 | #[pymethods]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `pyclass` which comes from the expansion of the attribute macro `pymethods` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0034]: multiple applicable items in scope
  --> tests/ui/invalid_pyclass_generic.rs:4:1
   |
 4 | #[pyclass(generic)]
   | ^^^^^^^^^^^^^^^^^^^ multiple `__class_getitem__` found
   |
note: candidate #1 is defined in an impl for the type `ClassRedefinesClassGetItem`
  --> tests/ui/invalid_pyclass_generic.rs:4:1
   |
 4 | #[pyclass(generic)]
   | ^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `ClassRedefinesClassGetItem`
  --> tests/ui/invalid_pyclass_generic.rs:21:5
   |
21 | /     pub fn __class_getitem__(
22 | |
23 | |
24 | |         cls: &Bound<'_, PyType>,
...  |
27 | |     ) -> PyResult<Py<PyAny>> {
   | |____________________________^
   = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0034]: multiple applicable items in scope
 --> tests/ui/invalid_pyclass_generic.rs:4:1
  |
4 | #[pyclass(generic)]
  | ^^^^^^^^^^^^^^^^^^^ multiple `wrap_into_ptr` found
  |
  = note: candidate #1 is defined in an impl for the type `pyo3::impl_::wrap::EmptyTupleConverter<()>`
  = note: candidate #2 is defined in an impl for the type `pyo3::impl_::wrap::EmptyTupleConverter<Result<(), E>>`
  = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error: never type fallback affects this call to an `unsafe` function
 --> tests/ui/invalid_pyclass_generic.rs:4:1
  |
4 | #[pyclass(generic)]
  | ^^^^^^^^^^^^^^^^^^^
  |
  = help: specify the type explicitly
  = warning: this changes meaning in Rust 2024 and in a future release in all editions!
  = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/never-type-fallback.html>
  = note: `#[deny(never_type_fallback_flowing_into_unsafe)]` (part of `#[deny(rust_2024_compatibility)]`) on by default
  = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui/invalid_pyclass_generic.rs:29:9
   |
27 |     ) -> PyResult<Py<PyAny>> {
   |          ------------------- expected `Result<pyo3::Py<pyo3::PyAny>, PyErr>` because of return type
28 |
29 |         pyo3::types::PyGenericAlias::new(cls.py(), cls.as_any(), key)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Result<Py<PyAny>, PyErr>`, found `Result<Bound<'_, PyGenericAlias>, PyErr>`
   |
   = note: expected enum `Result<pyo3::Py<pyo3::PyAny>, _>`
              found enum `Result<pyo3::Bound<'_, PyGenericAlias>, _>`

error[E0034]: multiple applicable items in scope
  --> tests/ui/invalid_pyclass_generic.rs:21:12
   |
21 |     pub fn __class_getitem__(
   |            ^^^^^^^^^^^^^^^^^ multiple `__pymethod___class_getitem____` found
   |
note: candidate #1 is defined in an impl for the type `ClassRedefinesClassGetItem`
  --> tests/ui/invalid_pyclass_generic.rs:4:1
   |
 4 | #[pyclass(generic)]
   | ^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `ClassRedefinesClassGetItem`
  --> tests/ui/invalid_pyclass_generic.rs:13:1
   |
13 | #[pymethods]
   | ^^^^^^^^^^^^
   = note: this error originates in the macro `::pyo3::impl_::pymethods::maybe_define_fastcall_function_with_keywords` which comes from the expansion of the attribute macro `pymethods` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0034]: multiple applicable items in scope
  --> tests/ui/invalid_pyclass_generic.rs:21:12
   |
21 |     pub fn __class_getitem__(
   |            ^^^^^^^^^^^^^^^^^ multiple `__class_getitem__` found
   |
note: candidate #1 is defined in an impl for the type `ClassRedefinesClassGetItem`
  --> tests/ui/invalid_pyclass_generic.rs:4:1
   |
 4 | #[pyclass(generic)]
   | ^^^^^^^^^^^^^^^^^^^
note: candidate #2 is defined in an impl for the type `ClassRedefinesClassGetItem`
  --> tests/ui/invalid_pyclass_generic.rs:21:5
   |
21 | /     pub fn __class_getitem__(
22 | |
23 | |
24 | |         cls: &Bound<'_, PyType>,
...  |
27 | |     ) -> PyResult<Py<PyAny>> {
   | |____________________________^
   = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0034]: multiple applicable items in scope
  --> tests/ui/invalid_pyclass_generic.rs:27:10
   |
27 |     ) -> PyResult<Py<PyAny>> {
   |          ^^^^^^^^ multiple `wrap_into_ptr` found
   |
   = note: candidate #1 is defined in an impl for the type `pyo3::impl_::wrap::EmptyTupleConverter<()>`
   = note: candidate #2 is defined in an impl for the type `pyo3::impl_::wrap::EmptyTupleConverter<Result<(), E>>`

error: never type fallback affects this call to an `unsafe` function
  --> tests/ui/invalid_pyclass_generic.rs:25:14
   |
25 |         key: &Bound<'_, PyAny>,
   |              ^
   |
   = help: specify the type explicitly
   = warning: this changes meaning in Rust 2024 and in a future release in all editions!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/never-type-fallback.html>

error: aborting due to 11 previous errors

Some errors have detailed explanations: E0034, E0308, E0592.
For more information about an error, try `rustc --explain E0034`.
